# liturgical-calendar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  traditional-roman-calendar-2026.ics  traditional-roman-calendar.ics
crates/calendar-api/: Cargo.toml
crates/calendar-api/src/: lib.rs
crates/calendar-core/: Cargo.toml
crates/calendar-core/src/: calendar.rs  computus.rs  lib.rs  precedence.rs  readings.rs  sanctoral.rs  temporal.rs  types.rs
crates/calendar-data/: Cargo.toml
crates/calendar-data/src/: lib.rs
src/: main.rs
tests/: known_dates.rs
